Fix vertical alignment when using superscripts

--- a/src/components/mapping.css
+++ b/src/components/mapping.css
@@ -26,7 +26,3 @@
 .mapping__output--error {
   color: pink;
 }
-
-.mapping__outputsup {
-  line-height: 0;
-}
